_configuration/grafana/grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana-route
  namespace: microservices-coffeeshop
  ownerReferences:
    - apiVersion: integreatly.org/v1alpha1
      kind: Grafana
      name: grafana
      uid: ad90c775-6ae5-11ea-90df-0e03d5a9f25b
      controller: true
      blockOwnerDeletion: true
spec:
  host: grafana-route-microservices-coffeeshop.apps.xxxxx.com
  subdomain: ''
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
  wildcardPolicy: None
